--- a/view/MainFrame.form
+++ b/view/MainFrame.form
@@ -40,10 +40,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="startPanel" min="-2" pref="618" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="124" max="32767" attributes="0"/>
-          </Group>
+          <Component id="startPanel" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -79,9 +76,6 @@
         <Component class="view.MainPanel" name="mainPanel">
           <Properties>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[1000, 844]"/>
-            </Property>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[1000, 844]"/>
             </Property>
           </Properties>
